--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,7 @@
   "version": "0.01",
   "permissions": ["activeTab"],
   "icons": {
-    // insert path to our extension LOGO
-    // "16": "images/icon-16.png",
+    "OFF": "images/LoneGnome.png"
   },
 
   "background": {
@@ -15,10 +14,8 @@
 
   "action": {
     "default_icon": {
-      "16": "images/icon-16.png",
-      "32": "images/icon-32.png",
-      "48": "images/icon-48.png",
-      "128": "images/icon-128.png"
+      "OFF": "images/LoneGnome.png",
+      "ON": "images/TwoGnomes.png"
     }
   }
 }
